Update README.md
Add most important step in the "running the code" section